[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
neynar_sdk = { path = "../generated/api" }
neynar_hub_sdk = { path = "../generated/hub-api"}
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1.44.2", features = ["full", "test-util"] }
hex = { version = "0.4.3", features = ["serde"] }
serde = "1.0.219"
